<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:paddingTop="40dp"
        android:id="@+id/tiempoCrono"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        android:text="@string/tiemposesion"
        android:textAppearance="?android:attr/textAppearanceLarge" />   
    <TextView
        android:id="@+id/cronoH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        android:text="@string/cero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        android:text="@string/dospuntos"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/cronoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        android:text="@string/dosceros"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
	</LinearLayout>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textSize="42sp"
        android:text="@string/cronometro"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
    
	<Chronometer
        	android:id="@+id/cronometro"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#000000"
        	android:gravity="center_horizontal"
        	android:layout_marginTop="20sp"
        	android:textSize="60sp" />
    
	<LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    
	    	<Button
	    		android:id="@+id/startCrono"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/iniciar"
	    		android:layout_marginTop="10dp"
				android:textColor="#FFFFFF"
				android:background="@drawable/fondobotonfinal"
				style="?android:attr/bottomDark"/>
	    	
        	<Button
	    		android:id="@+id/stopCrono"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/detener"
	    		android:layout_marginTop="10dp"
	    		android:layout_marginLeft="15dp"
				android:textColor="#FFFFFF"
				android:background="@drawable/fondobotonfinal"
				style="?android:attr/bottomDark"/>
        </LinearLayout>


    
</LinearLayout>
