<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondodegradado"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/fecha"
        	android:layout_marginTop="15dp"
        	android:textSize="14sp"/>
    	
		<LinearLayout
	    	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:gravity="right">

			<EditText
			    android:id="@+id/drsfecha"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:ems="6"
			    android:textColor="#000000"
			    android:layout_marginLeft="50dp"
			    android:inputType="date"
			    android:textSize="14sp">
			</EditText>
    			
    	</LinearLayout>
    </LinearLayout>
        
    <Button
        android:id="@+id/drsejs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscarejercicios"
        android:layout_marginTop="15dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"
        android:textSize="14sp"/>

		<LinearLayout
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center">

			<Button
			    android:id="@+id/drsantej"
			    android:textColor="#000000"
			    android:background="@android:color/transparent"
			    android:layout_width="70dp"
			    android:layout_height="wrap_content"
			    android:text="@string/ant" />

    	    <TextView
    	        android:id="@+id/drsej"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/ningunejercicio"
        		android:textColor="#000000"
        		android:layout_marginRight="10dp"
        		android:layout_marginLeft="10dp"
        		android:textSize="14sp"/>
    	    
			<Button
			    android:id="@+id/drssigej"
			    android:textColor="#000000"
			    android:background="@android:color/transparent"
			    android:layout_width="70dp"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="20dp"
			    android:text="@string/sig" />    	    		
    	</LinearLayout>    
    
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="45dp">
    <Button
        android:id="@+id/drsaceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".48"
        android:text="@string/aceptar"
        android:textColor="#FFFFFF"
        android:background="@drawable/fondobotonfinal"
        style="?android:attr/bottomDark"/>

    <Button
        android:id="@+id/drscancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".48"
        android:layout_marginLeft="10dp"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        android:background="@drawable/fondobotonfinal"
        style="?android:attr/bottomDark"/>
    </LinearLayout>
</LinearLayout>
