<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondodegradado"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <Button
        android:id="@+id/drcontarrepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contarrepeticiones"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"/>

    <Button
        android:id="@+id/drsonarrepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sonar"
       	android:layout_marginTop="10dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"/>
    
    <Button
        android:id="@+id/drmanual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introducirmanualmente"
       	android:layout_marginTop="10dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"/>
    
    <Button
        android:id="@+id/drcancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
       	android:layout_marginTop="10dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"/>    
    

</LinearLayout>
