<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:background="@drawable/fondodegradado"
    tools:context=".MainActivity">
   
	<Button
		android:id="@+id/buttonSesion"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/iniciarsesion"
		android:layout_marginTop="10dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"
		/>
	
       <Button
           android:id="@+id/buttonRutinas"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/rutinas"
           android:textColor="#FFFFFF"
           android:background="@drawable/fondobotonfinal"
           />
       
        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/perfil"
            android:textColor="#FFFFFF"
            android:background="@drawable/fondobotonfinal"
            />       

       <Button
           android:id="@+id/buttonResultados"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/resultados"
           android:textColor="#FFFFFF"
           android:background="@drawable/fondobotonfinal"
           />  
</LinearLayout>