<?xml version="1.0" encoding="utf-8"?>    
   <LinearLayout
       	android:orientation="vertical"
       	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/fondodegradado"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
        >
        
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center">
   		<Button
       	    android:id="@+id/prevday"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:textColor="#000000"
       	    android:text="@string/ant"
       	    android:background="@android:color/transparent" />

   		<TextView
   	    	android:id="@+id/diaSemana"
   	    	android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
   	    	android:textColor="#000000"
   	    	android:text="@string/lunes"
   	    	android:textSize="34sp" />
   		
   		<Button
       	    android:id="@+id/nextday"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/sig"
       	    android:textColor="#000000"
       	    android:background="@android:color/transparent" />				
        </LinearLayout>

          	

   		

   	    
   	<ListView
	    android:id="@+id/listado"
	    android:layout_width="fill_parent"
	    android:layout_height="250dp"
	    android:background="@android:color/transparent"/>	
  	
   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="match_parent"
   	    android:orientation="vertical"
   	    android:gravity="bottom">

   	   	<Button
			android:id="@+id/verDiaRutina"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:textColor="#FFFFFF"
			android:background="@drawable/fondobotonfinal"
			android:text="@string/ejerciciosseleccionados"/>   		
   	
		<Button
			android:id="@+id/guardarDiaRutina"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/guardardia"
			android:layout_marginTop="10dp"
			android:textColor="#FFFFFF"
			android:background="@drawable/fondobotonfinal"/>
   	</LinearLayout>
  </LinearLayout>