<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondodegradado"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   
   	<Button
   	    android:id="@+id/derejercicioanterior"
   	    android:text="@string/ant"
   	    android:layout_width="wrap_content"
   	    android:layout_height="match_parent"
   	    android:layout_marginRight="10dp"
   	    android:background="@android:color/transparent"/>
   	
    <ImageView
        android:id="@+id/derfotoEj"
        android:contentDescription="@string/fotoej"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"/>   	

   	<Button
   	    android:id="@+id/derejerciciosiguiente"
   	    android:text="@string/sig"
   	    android:layout_width="wrap_content"
   	    android:layout_height="match_parent"
   	    android:layout_marginLeft="10dp"
   	    android:background="@android:color/transparent"/>

   	</LinearLayout>
   	

    
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
		<TextView
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"              
        	android:text="@string/serieser"
        	android:textColor="#000000"
        	android:textSize="14sp"
        	android:layout_marginTop="15dp"/> 
        	<LinearLayout 
   	        	android:layout_width="match_parent"
   	        	android:layout_height="match_parent"
   	        	android:gravity="right">	
   				<EditText
	    			android:id="@+id/derseries"
	    			android:layout_width="wrap_content"
	    			android:layout_height="match_parent"
	    			android:ems="3"
	    			android:textColor="#000000"
	    			android:inputType="number"
	    			android:textSize="14sp">
					</EditText> 
   		</LinearLayout>   	  
    </LinearLayout> 
    
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        	<TextView
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"              
        	android:text="@string/repeticioneser"
        	android:textColor="#000000"
        	android:textSize="14sp"
        	android:layout_marginTop="15dp"/> 
        	<LinearLayout 
   	        	android:layout_width="match_parent"
   	        	android:layout_height="match_parent"
   	        	android:gravity="right">	
   				<EditText
	    			android:id="@+id/derrepeticiones"
	    			android:layout_width="wrap_content"
	    			android:layout_height="match_parent"
	    			android:ems="6"
	    			android:textColor="#000000"
	    			android:inputType="text"
	    			android:textSize="14sp">
					</EditText> 
   		</LinearLayout>  
    </LinearLayout> 
    
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        	<TextView
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"              
        	android:text="@string/descansoentreseries"
        	android:textColor="#000000"
        	android:textSize="14sp"
        	android:layout_marginTop="15dp"/> 
        	<LinearLayout 
   	        	android:layout_width="match_parent"
   	        	android:layout_height="match_parent"
   	        	android:gravity="right">	
   				<EditText
	    			android:id="@+id/derdescansoseries"
	    			android:layout_width="wrap_content"
	    			android:layout_height="match_parent"
	    			android:ems="3"
	    			android:textColor="#000000"
	    			android:inputType="number"
	    			android:textSize="14sp">
					</EditText> 
   		</LinearLayout>  
    </LinearLayout>   	
   
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        	<TextView
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"              
        	android:text="@string/descansoentreejercicios"
        	android:textColor="#000000"
        	android:textSize="14sp"
        	android:layout_marginTop="15dp"/> 
        	<LinearLayout 
   	        	android:layout_width="match_parent"
   	        	android:layout_height="match_parent"
   	        	android:gravity="right">	
   				<EditText
	    			android:id="@+id/derdescansoejercicios"
	    			android:layout_width="wrap_content"
	    			android:layout_height="match_parent"
	    			android:ems="3"
	    			android:textColor="#000000"
	    			android:inputType="number"
	    			android:textSize="14sp">
					</EditText> 
   		</LinearLayout>  
    </LinearLayout>    
   
   <LinearLayout
       	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="25dp">
        
	<Button
        android:id="@+id/derejercicioseleccionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".48"
        android:text="@string/seleccionar"
        android:textColor="#FFFFFF"
        android:background="@drawable/fondobotonfinal"
        style="?android:attr/bottomDark"/>
   
   	<Button
        android:id="@+id/dersalirdialogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".48"
        android:layout_marginLeft="10dp"
        android:text="@string/cerrar"
        android:textColor="#FFFFFF"
        android:background="@drawable/fondobotonfinal"
        style="?android:attr/bottomDark"/>
   	</LinearLayout>   	

</LinearLayout>
