<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"	    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/fondodegradado"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/llrutina"
        
        android:layout_alignParentRight="true">

   		<Button
       	    android:id="@+id/rutinaprevday"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/ant"
       	    android:background="@android:color/transparent" />

   		<TextView
   	    	android:id="@+id/rutinadiaSemana"
   	    	android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
   	    	android:text="@string/lunes"
   	    	android:textColor="#000000"
   	    	android:textSize="34sp" />
   		
   		<Button
       	    android:id="@+id/rutinanextday"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/sig"
       	    android:background="@android:color/transparent" />				
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rutinaLayout"
   		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:layout_marginTop="20dp"
    	android:gravity="bottom">
        	
   	<Button
        android:id="@+id/rutinaPersonalizada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
		android:textColor="#FFFFFF"
		android:background="@drawable/fondobotonfinal"
        android:text="@string/personalizar" /> 
	</LinearLayout>
		    
 	<ListView
 	    android:id="@+id/rutinaListView"
 	    android:layout_above="@+id/rutinaLayout"
 	    android:layout_below="@+id/llrutina"
    	android:layout_width="fill_parent"
    	android:layout_height="match_parent"/>
</RelativeLayout>    