<?xml version="1.0" encoding="utf-8"?>
    
    <LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondodegradado">

    <CheckBox
        android:id="@+id/sonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activarsonido"
        android:textColor="#000000"/>
    

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
       	<Button
        	android:id="@+id/cambiarOpciones"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/guardarcambios"
        	android:layout_marginTop="25dp"
			android:textColor="#FFFFFF"
			android:background="@drawable/fondobotonfinal"/> 
 
    	<Button
        	android:id="@+id/borrarBaseDatos"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/borrarregistro"
       		android:layout_marginTop="10dp"
			android:textColor="#FFFFFF"
			android:background="@drawable/fondobotonfinal"/>    
	</LinearLayout>
</LinearLayout>
